# talky-toaster

./: .gitignore  CMakeLists.txt  README.md  gen_wifi_deets.py  generate_deets.cmake  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/JD_FOTA/: CMakeLists.txt  JD_FOTA.c
components/JD_FOTA/include/: JD_FOTA.h
components/audio/: CMakeLists.txt  Kconfig.projbuild  README.md  audio.c
components/audio/include/: audio.h
components/board/: CMakeLists.txt  Kconfig.projbuild  board.c  board_pins_config.c
components/board/breadboard_v1_0/: board.c  board_pins_config.c
components/board/include/: board.h  board_def.h
components/board/perfboard_v1_1/: board.c  board_pins_config.c
components/files/include/: files.h
components/http_lib/: CMakeLists.txt  http_lib.c
components/http_lib/include/: http_lib.h
components/motion_sensor/: motionsensor.c
components/motion_sensor/include/: motionsensor.h  report.h
components/network/: CMakeLists.txt  Kconfig.projbuild  network.c
components/networking/: CMakeLists.txt  credentials.cpp  time.cpp  wifi.cpp
components/networking/include/: credentials.h  networking.h  wifi.h
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
hardware/: .gitignore  fp-info-cache  io.kicad_sch  mcu.kicad_sch  power.kicad_sch  talky-toaster.csv  talky-toaster.kicad_pcb  talky-toaster.kicad_prl  talky-toaster.kicad_pro  talky-toaster.kicad_sch
main/: CMakeLists.txt  Kconfig.projbuild
main/include/: main.h
main/src/: main.c  main.cpp  time.cpp
(+2 files in other folders)
