idf_component_register(SRCS "src/main.c"
                       EMBED_FILES "audio_files/howdy.mp3" "audio_files/boot.mp3" 
                            "audio_files/im_talkie.mp3" "audio_files/offer_toast_1.mp3"
                            "audio_files/offer_toast_2.mp3" "audio_files/offer_muffin.mp3"
                            "audio_files/waffle_man.mp3"
                       INCLUDE_DIRS "include")
